<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".registration_activity_fragments.LogIn">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@+id/logo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/email_login_input"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="20dp"/>

    <EditText
        android:id="@+id/password_login_input"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:layout_below="@+id/email_login_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_login_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:foreground="@drawable/ripple_effect"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgot_pass"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_pass_btn"
        android:layout_marginTop="30dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_centerHorizontal="true"
        android:text="@string/new_sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"

        />

</RelativeLayout>