<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".registration_activity_fragments.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/first_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_text"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/first_name_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Required"
                android:textColor="@color/limitations"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="textPersonName" />
            <TextView
                android:id="@+id/last_name_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Required"
                android:textColor="@color/limitations"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/email_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Required"
                android:textColor="@color/limitations"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/password_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Required"
                android:textColor="@color/limitations"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_pass_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pass"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_confirm_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/confirm_password_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Required"
                android:textColor="@color/limitations"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_pass_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_number_input"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="5dp"
                android:inputType="number"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_rounded"
            android:foreground="@drawable/ripple_effect"
            android:padding="8dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>



