<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuActivity">
<androidx.cardview.widget.CardView
    android:id="@+id/my_account_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    app:cardCornerRadius="20dp"
    android:elevation="10dp"
    android:gravity="center_vertical"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:focusable="true"
    android:layout_marginHorizontal="30dp">
    <LinearLayout
        android:id="@+id/my_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="60dp"
        android:paddingVertical="10dp"
        >

        <ImageView
            android:id="@+id/my_account_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/my_account" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/my_account"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/shop_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:foreground="@drawable/ripple_effect"
        android:focusable="true"
        android:layout_marginHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingVertical="10dp"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/shop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="30dp"
                android:text="@string/shop"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/my_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        android:layout_marginHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingVertical="10dp"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/shopping_cart" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="30dp"
                android:text="@string/my_cart"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rate_us_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        android:layout_marginHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingVertical="10dp"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/rate_us" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="30dp"
                android:text="@string/rate_us"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
  

</LinearLayout>