<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".selected_action_activity_fragments.MyAccount">

    <LinearLayout
        android:id="@+id/user_img_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/user_image" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/edit_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/edit_button"
            android:layout_marginTop="-25dp"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstname_lastname_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_img_container"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp">

        <LinearLayout
            android:id="@+id/first_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:id="@+id/account_first_name"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp"
                android:background="@drawable/slightly_rounded"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:id="@+id/account_last_name"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:background="@drawable/slightly_rounded"
                android:inputType="textPersonName"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/firstname_lastname_container"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/account_email"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:background="@drawable/slightly_rounded"
           />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/email_container"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/account_phone_number"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:background="@drawable/slightly_rounded"
            android:inputType="number"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/phone_number_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:foreground="@drawable/ripple_effect"

        android:text="Save"
        android:textSize="20sp"
        android:textAllCaps="false" />

</RelativeLayout>