<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/product_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_below="@+id/product_name_title"
            android:layout_centerHorizontal="true"
            android:background="@drawable/slightly_rounded"
            android:layout_marginTop="50dp"/>

<!--        <com.makeramen.roundedimageview.RoundedImageView-->
<!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/product_img"-->
<!--            android:layout_width="170dp"-->
<!--            android:layout_height="170dp"-->
<!--            android:layout_below="@+id/product_name_title"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="50dp"-->
<!--            app:riv_border_color="#333333"-->
<!--            app:riv_border_width="1dip"-->
<!--            app:riv_corner_radius="30dip"-->
<!--            app:riv_mutate_background="true"-->
<!--            app:riv_oval="true"-->
<!--            app:riv_tile_mode="repeat" />-->

        <LinearLayout
            android:id="@+id/price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_img"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/product_price_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_container"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_cart"
            android:layout_width="185dp"
            android:layout_height="60dp"
            android:layout_below="@+id/description_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded"
            android:foreground="@drawable/ripple_effect"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>


</ScrollView>